fixed nav z-index: 9999

--- a/src/index.css
+++ b/src/index.css
@@ -12,7 +12,7 @@ nav {
   width: 100%;
   height: 80px;
   position: fixed;
-  z-index: 10; /* กำหนดค่า z-index ให้สูงกว่าเพื่อให้แสดงอยู่ด้านหน้า */
+  z-index: 9999; /* กำหนดค่า z-index ให้สูงกว่าเพื่อให้แสดงอยู่ด้านหน้า */
 }
 
 .menu {
